@@ -1,3 +1,4 @@
-pkglib_LTLIBRARIES = libHwME.la
-libHwME_la_SOURCES = MEee2gZ2bb.cc MEee2gZ2bb.h MEqq2gZ2ll.cc \
+pkglib_LTLIBRARIES = HwME.la
+HwME_la_SOURCES = MEee2gZ2bb.cc MEee2gZ2bb.h MEqq2gZ2ll.cc \
 		MEqq2gZ2ll.h MEqq2gZ2ll.icc
+HwME_la_LDFLAGS = -module
