@@ -1,5 +1,8 @@
 2005-09-22  David Grellscheid  <David.Grellscheid@durham.ac.uk>
 
+	* src/LEPbb.in, src/HerwigDefaults.in, lib/Makefile.am, 
+	MatrixElement/*: Turned HwME.so into a module.
+
 	* Decay/*, PDF/*, PDT/*: bugfixes and warning eliminations from
 	-Wshadow 
 
